--- a/nodeAPI/package.json
+++ b/nodeAPI/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "password-hash": "^1.2.2"
   }
 }
