--- a/angularProject/package.json
+++ b/angularProject/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.2.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
