--- a/angularProject/package.json
+++ b/angularProject/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "highcharts": "^8.2.2",
+    "highcharts-angular": "^2.8.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
