--- a/angularProject/package.json
+++ b/angularProject/package.json
@@ -21,11 +21,15 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "highcharts": "^8.2.2",
     "highcharts-angular": "^2.8.2",
+    "ngx-gauge": "^1.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
