--- a/angularProject/package.json
+++ b/angularProject/package.json
@@ -23,12 +23,13 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "highcharts": "^8.2.2",
     "highcharts-angular": "^2.8.2",
     "ngx-gauge": "^1.1.0",
