--- a/angularProject/package.json
+++ b/angularProject/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.3",
+    "exceljs": "^1.12.0",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
