--- a/nodeAPI/package.json
+++ b/nodeAPI/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "password-hash": "^1.2.2"
   }
